# -esp32-_ClaudeBudy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_EN.md  partitions.csv  sdkconfig.defaults  一键刷机.bat
main/: CMakeLists.txt  app_cast.c  app_cast.h  app_claude.c  app_claude.h  app_menu.c  app_menu.h  app_settings.c  app_settings.h  app_tools.c  app_tools.h  board.c  board.h  claude_api.c  claude_api.h  config.c  config.h  font_cn_16.c  idf_component.yml  main.c  sdcard.c  sdcard.h  secrets.h.example  ui_common.c  ui_common.h  ui_font.h  web_portal.c  web_portal.h
tools/: assemble_image.py  flash.py  flash_all.py  gen_symbols.py  package-lock.json  package.json  symbols.txt
xueersi2/学而思小喵编程掌机/_research/board/: CMakeLists.txt  README.md  build.py  devmanual.md  flash.py  idf_component.yml  main.c  main_CMakeLists.txt  sdkconfig.defaults
xueersi2/学而思小喵编程掌机/_research/gomoku/: CMakeLists.txt  DEVELOPMENT.md  README.md  ai_bridge.cpp  ai_bridge.h  audio.cpp  build.py  flash.py  idf_component.yml  input.cpp  input.h  ipc.cpp  ipc.h  main.c  sdkconfig.defaults  ui.cpp  ui.h
xueersi2/学而思小喵编程掌机/flash_download_tool/flash_download_tool/configure/esp32/: spi_download.conf  utility.conf
